# WOA-GPU

./: README.md  flake.nix
cpu_implemenation_woa/: CMakeLists.txt  build.sh  flake.nix  main.cpp  whale-optimization-algorithm.cpp
cpu_implemenation_woa/headers/: WOA.hpp  utils.hpp  whale.hpp
cpu_implemenation_woa/src/: WOA.cpp  main.cpp  utils.cpp  whale.cpp
cuda_implementation_woa/: CMakeLists.txt  build.sh  hello.cu  random.cu  sample  sample.cu
cuda_implementation_woa/headers/: WOA.cuh  utils.cuh  whale.cuh
cuda_implementation_woa/src/: WOA.cu  main.cu  utils.cu  whale.cu
opencl_implementation_woa/: WOA_OpenCL_Project.vcxproj  main.cpp  woa_kernels.cl
